[gd_scene load_steps=25 format=3 uid="uid://bbeyh24euvevl"]

[ext_resource type="Script" uid="uid://h0daw6pbc6q2" path="res://Dungeons/Enemies/Keese/keese.gd" id="1_72yfl"]
[ext_resource type="Texture2D" uid="uid://djbaubw3ev8fe" path="res://Dungeons/Enemies/NES - The Legend of Zelda - Dungeon Enemies.png" id="2_ojhv7"]
[ext_resource type="Script" uid="uid://5d63nccbnc68" path="res://Universal Scripts/hit_box.gd" id="3_2reyh"]
[ext_resource type="Script" uid="uid://furv363hxfgr" path="res://Universal Scripts/hurt_box.gd" id="4_e45u8"]
[ext_resource type="Script" uid="uid://bjsik6sblx81f" path="res://Overworld/Enemies/enemy_state_machine.gd" id="5_1gfb8"]
[ext_resource type="Script" uid="uid://bde8l4lk8maxa" path="res://Universal Scripts/stun_box.gd" id="5_pjt53"]
[ext_resource type="Script" uid="uid://ba3j30tw6k6qy" path="res://Dungeons/Enemies/Keese/idle.gd" id="6_4l1bf"]
[ext_resource type="Script" uid="uid://gfxaio4y8gvl" path="res://Dungeons/Enemies/Keese/land.gd" id="7_h6ocn"]
[ext_resource type="Script" uid="uid://tqbas4gpq5pq" path="res://Dungeons/Enemies/Keese/destroy.gd" id="7_hf6jp"]
[ext_resource type="Script" uid="uid://ch46dou0y2j6j" path="res://Dungeons/Enemies/Keese/take_off.gd" id="7_nrwrp"]
[ext_resource type="Resource" uid="uid://lt658aytnf23" path="res://Items/Drop Table X.tres" id="8_r0hn4"]
[ext_resource type="Script" uid="uid://c0jbjftewifqk" path="res://Dungeons/Enemies/Keese/fly.gd" id="8_scsaj"]
[ext_resource type="Script" uid="uid://bfvtkbylm1mdt" path="res://Dungeons/Enemies/Keese/stun.gd" id="9_22ag3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5xcl"]
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_mqpbc"]
resource_name = "Move"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [54, 55]
}

[sub_resource type="Animation" id="Animation_r08pl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [54]
}

[sub_resource type="Animation" id="Animation_7ptmo"]
resource_name = "Stun"

[sub_resource type="Animation" id="Animation_852kc"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [55]
}

[sub_resource type="Animation" id="Animation_3nqs2"]
resource_name = "slow_down"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 54, 55, 54, 55]
}

[sub_resource type="Animation" id="Animation_j0h38"]
resource_name = "speed_up"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [55, 54, 55, 54, 55, 54]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7mvr"]
_data = {
&"Move": SubResource("Animation_mqpbc"),
&"RESET": SubResource("Animation_r08pl"),
&"Stun": SubResource("Animation_7ptmo"),
&"idle": SubResource("Animation_852kc"),
&"slow_down": SubResource("Animation_3nqs2"),
&"speed_up": SubResource("Animation_j0h38")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_86i26"]
size = Vector2(14, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_5tq4b"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7att"]
size = Vector2(14, 9)

[node name="Keese" type="CharacterBody2D" node_paths=PackedStringArray("WallDetector", "timer", "animation_player")]
z_index = 1
collision_layer = 4
script = ExtResource("1_72yfl")
speed = 20.0
drop_group = 4
WallDetector = NodePath("WallDetector")
timer = NodePath("EnemyStateMachine/Fly/Change Direction")
animation_player = NodePath("AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ojhv7")
hframes = 12
vframes = 14
frame = 54

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_d5xcl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a7mvr")
}
autoplay = "Move"

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 516
collision_mask = 0
monitoring = false
script = ExtResource("3_2reyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_86i26")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_e45u8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_5tq4b")

[node name="StunBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("5_pjt53")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StunBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_h7att")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("5_1gfb8")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("6_4l1bf")
after_idle_state = NodePath("../Take Off")

[node name="Land" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_move_state")]
script = ExtResource("7_h6ocn")
after_move_state = NodePath("../Idle")
_decelerationRate = 0.2

[node name="Take Off" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_move_state")]
script = ExtResource("7_nrwrp")
after_move_state = NodePath("../Fly")

[node name="Fly" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_move_state")]
script = ExtResource("8_scsaj")
after_move_state = NodePath("../Land")

[node name="Change Direction" type="Timer" parent="EnemyStateMachine/Fly"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("9_22ag3")
next_state = NodePath("../Idle")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("7_hf6jp")
drop_table = ExtResource("8_r0hn4")
